--- a/css/pc.css
+++ b/css/pc.css
@@ -284,6 +284,57 @@ input, button {
     -webkit-transform: translate3d(-24px, 0, 0);
     transform: translate3d(-24px, 0, 0);
 }
-
+.header{
+    background-color: #ffd61e;
+    height: 60px;
+    line-height: 60px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    box-shadow: 0 0 10px #ccc;
+}
+.container{
+    overflow: hidden;
+    background-color: #fff;
+    margin-top: 60px;
+}
+.nav{
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+    
+}
+.nav li{
+    padding: 0 20px;
+    margin: 0 2px;
+}
+.nav li:hover,.on{
+    cursor: pointer;
+    background-color: #fff2b6;
+    transition: ease all 0.5s;
+}
+.xixi{
+    font-size: 48px;
+    margin-top: 80px;
+    color: #424b56;
+    text-align: center;
+}
+.image-wrap:hover{
+    transition: ease all 0.5s;
+    border: 16px solid #fff;
+    box-shadow: 0 0 10px #ccc;  
+}
+.image-wrap>img{
+    transition: ease all 0.5s;
+}
+.image-wrap:hover>img{
+    
+    transform: scale(1.3);
+}
+.image-wrap{
+    border: 16px solid transparent;
+}
 
 
