--- a/demo/css/mcss.css
+++ b/demo/css/mcss.css
@@ -263,12 +263,23 @@ i.icon_set {
   margin: 12px 12px;
   border-top: 1px solid transparent;
   box-sizing: border-box;
+  position: relative;
+}
+
+.div_riqi {
+  position: absolute;
+  background-color: #20a0ff;
+  font-size: 17px;
+  padding: 2px 16px;
+  color: #fff;
+  border-radius: 0 0 14px 0;
 }
 
 .m_part_header {
   display: flex;
   justify-content: space-between;
   margin: 10px;
+  margin-top: 35px;
 }
 
 .m_part_h_l {
@@ -350,8 +361,18 @@ i.icon_set {
 
 .m_info_1 {
   margin: 0px 12px;
+  justify-content: space-between;
+}
+
+.m_infolabel {
+  background-color: #fff2ea;
+  height: 28px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0 3px;
+  border-radius: 4px;
+  line-height: 28px;
 }
 
 .m_otherinfo {
@@ -448,9 +469,10 @@ a.m_company i,
 
 .worktext {
   color: #000;
-  width: calc(100% - 80px);
+  /* width: calc(100% - 80px); */
   font-size: 14px;
   line-height: 24px;
+  text-align: justify;
 }
 
 .m_zuijia {
@@ -615,7 +637,7 @@ a.m_company i,
 }
 
 .rmargin_1 {
-  margin: 20px 12px 12px 12px;
+  margin: 12px 12px 12px 12px;
 }
 
 .jieguo {
