--- a/demo/css/mcss.css
+++ b/demo/css/mcss.css
@@ -132,7 +132,7 @@ p {
 }
 
 .corp_Part_search {
-  height: 6vh;
+  height: 8vh;
 }
 
 .corp_Part_table {
@@ -143,6 +143,7 @@ p {
 .corp_Part_tab {
   height: 95vh;
   background-color: #fff;
+  margin-top: 5vh;
 }
 
 .corp_Part_pargrand {
@@ -258,7 +259,7 @@ i.icon_set {
 .m_part_Box {
   background-color: #fff;
   overflow: hidden;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 0 2px 20px rgb(255 255 255 / 33%);
   margin: 12px 12px;
   border-top: 1px solid transparent;
@@ -272,7 +273,7 @@ i.icon_set {
   font-size: 17px;
   padding: 2px 16px;
   color: #fff;
-  border-radius: 0 0 14px 0;
+  border-radius: 0 0 10px 0;
 }
 
 .m_part_header {
@@ -373,16 +374,22 @@ i.icon_set {
   padding: 0 3px;
   border-radius: 4px;
   line-height: 28px;
+  position: relative;
+  margin-bottom: 5px;
 }
 
 .m_otherinfo {
-  margin: 0px 12px;
+  margin: 10px 12px;
   font-size: 12px;
   margin-bottom: 4px;
 }
 
+.van-calendar {
+  z-index: 999;
+}
+
 a.m_company {
-  padding: 4px 0px;
+  /* padding: 4px 0px; */
   /* background-color: #dae8f7; */
   background-color: #fff;
   border-radius: 4px;
@@ -404,7 +411,7 @@ a.m_connect {
 
 a.m_company,
 a.m_connect {
-  margin: 4px 0;
+  /* margin: 4px 0; */
   display: inline-flex;
   font-size: 12px;
 }
@@ -479,6 +486,8 @@ a.m_company i,
   color: #ff9548;
   font-size: 16px;
   margin-bottom: 5px;
+  position: relative;
+  top: 1px;
 }
 
 .m_work_time {
