--- a/tsznav/static/css/help.scss
+++ b/tsznav/static/css/help.scss
@@ -10,6 +10,24 @@ h1{
     padding: 0;
     line-height: 1;
 }
+.baidusearch{
+    width: 550px; margin:10px auto;
+    // position: absolute;
+    // right: 0px;
+    // top: 10px;
+    // display: flex;
+    .sc_icon{
+        height: 50px;
+        text-align: center;
+        margin-bottom: 20px;
+        img{
+            height: 100%;
+        }
+    }
+}
+.tsz_navbody{
+    padding: 0 24px;
+}
 .title{
     margin-bottom: 20px;
 }
@@ -24,8 +42,16 @@ h1{
     // border-bottom: 1px solid #ffffff91;
     h1{
         text-transform: uppercase;
+        display: flex;
+        align-items: flex-end;
+        font-size: 20px;
+        height: 40px;
         span{
             color: $main_color;
+            margin-right: 10px;
+            img{
+                height: 40px;
+            }
         }
     }
     .logobox{
@@ -35,11 +61,14 @@ h1{
         }
     }
 }
+.navbody{
+    height: calc(100vh - 60px);
+}
 .grid-content{
     background-color: #fff;
     padding: 10px;
     background: #ecedf0;
-    box-shadow: 5px 5px 10px rgba(163,177,198,60%), -5px -5px 10px rgba(255, 255, 255,50%);
+    // box-shadow: 5px 5px 10px rgba(163,177,198,60%), -5px -5px 10px rgba(255, 255, 255,50%);
     overflow: hidden;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -88,7 +117,7 @@ h1{
     }
 }
 .nav_tab_body{
-    padding: 12px 24px 0px 24px;
+    padding: 12px 0px 0px 0px;
 }
 
 .navtab{
