--- a/tsznav/static/css/help.css
+++ b/tsznav/static/css/help.css
@@ -38,6 +38,7 @@ h1 {
   height: 60px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0px 20px;
   background-color: transparent;
   backdrop-filter: blur(6px);
