--- a/tsznav/static/css/help.scss
+++ b/tsznav/static/css/help.scss
@@ -35,6 +35,7 @@ h1{
     height: 60px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0px 20px;
     // background-color: #f5f8ffb5;
     background-color: transparent;
