探索者网址导航

--- a/tsznav/static/css/help.css
+++ b/tsznav/static/css/help.css
@@ -151,3 +151,9 @@ h1 {
 .navtab .el-tabs__active-bar {
   background-color: #583cf1;
 }
+
+@media screen and (max-width: 860px) {
+  .baidusearch {
+    width: calc(100vw - 40px);
+  }
+}
